--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,7 +1,7 @@
 @import "bootstrap/scss/bootstrap.scss";
 
 body {
-    background: url('redcar.jpg') no-repeat center center fixed;
+    background: url('img/redcar.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
